fix: Modificación de texto en formulario actualizar

--- a/src/app/core/shared-components/track-update-info-dialog/track-update-info-dialog.component.html
+++ b/src/app/core/shared-components/track-update-info-dialog/track-update-info-dialog.component.html
@@ -1,7 +1,7 @@
 
 <mat-dialog-content>
     <form [formGroup]="trackForm" aria-labelledby="trackFormTitle">
-        <h2 id="trackFormTitle">Nuevo Video</h2>
+        <h2 id="trackFormTitle">Actualizar datos</h2>
         <mat-form-field appearance="fill" class="full-width">
             <mat-label>Autor</mat-label>
             <input matInput formControlName="author" placeholder="Ingrese el autor" aria-required="true">
